fix LICENSE filename

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: pyNDI.__version__
 url = https://github.com/nakajimalab-bmi-tmd/pyNDI
 author = Shinya ONOGI
 author_email = shinya.onogi.1979@ieee.org
-license_file = MIT
+license_file = LICENSE
 description = pyNDI: Communication library for NDI tracking devices (Polaris, Aurora)
 long_description = file: README.md
 
